Adding spark jars to airflow worker

--- a/docker/development.env
+++ b/docker/development.env
@@ -27,3 +27,5 @@ AIRFLOW_CONN_REST_API=http://172.17.0.1:8095
 #AWS_SECRET_ACCESS_KEY=
 #AWS_DEFAULT_REGION=
 PYTHONOPTIMIZE=1
+
+SPARK_LOCAL_HOSTNAME=localhost
