Fixing integeration issues

--- a/docker/development.env
+++ b/docker/development.env
@@ -29,3 +29,4 @@ AIRFLOW_CONN_REST_API=http://172.17.0.1:8095
 PYTHONOPTIMIZE=1
 
 SPARK_LOCAL_HOSTNAME=localhost
+SDS_WAREHOUSE_PATH=s3a://warehouse
