Fixing integration issues

--- a/docker/development.env
+++ b/docker/development.env
@@ -30,3 +30,11 @@ PYTHONOPTIMIZE=1
 
 SPARK_LOCAL_HOSTNAME=localhost
 SDS_WAREHOUSE_PATH=s3a://warehouse
+SDS_ARTIFACTORY_PATH=/sds/execution/sds-pe-auto-parser-assembly.jar
+SDS_SDM_DBT_PROJECT_DIRECTORY=/sds/dbt/sdm_genie
+
+SPARK_THRIFT_HOST=spark-thrift
+
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin
+
