--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -157,6 +157,7 @@ services:
       - ./sds/airflow/dags:/opt/airflow/dags
       - ./webserver_config.py:/opt/airflow/webserver_config.py
       - ./airflow.cfg:/opt/airflow/airflow.cfg
+      - ./logs:/opt/airflow/logs
       - ./sds:/sds
     extra_hosts:
       - "host.docker.internal:host-gateway"
@@ -181,6 +182,7 @@ services:
       - ./sds/airflow/dags:/opt/airflow/dags
       - ./webserver_config.py:/opt/airflow/webserver_config.py
       - ./airflow.cfg:/opt/airflow/airflow.cfg
+      - ./logs:/opt/airflow/logs
       - ./sds:/sds
     restart: always
     extra_hosts:
@@ -208,6 +210,7 @@ services:
       - ./webserver_config.py:/opt/airflow/webserver_config.py
       - ./airflow.cfg:/opt/airflow/airflow.cfg
       - ./sds/airflow/dags:/opt/airflow/dags
+      - ./logs:/opt/airflow/logs
       - ./sds:/sds
     restart: always
     extra_hosts:
