--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       MYSQL_USER: admin
       MYSQL_PASSWORD: admin
       MYSQL_DATABASE: metastore_db
+      TZ: "UTC"
     volumes:
       - ./.hive-metastore:/var/lib/mysql
       - ./sds:/sds
@@ -77,6 +78,7 @@ services:
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin
       MINIO_API_SELECT_PARQUET: "on"
+      TZ: "UTC"
     command: server --console-address ":9001" /data
     networks:
       - dbt_sample_network
@@ -106,6 +108,7 @@ services:
       - '8080:8080' # Unsecured HTTP Web Port
     environment:
       - NIFI_WEB_HTTP_PORT=8080
+      - TZ="UTC"
     networks:
       - dbt_sample_network
     volumes:
